--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@ td:nth-child(1) {
 }
 
 body,
-html {
+html,
+#root {
   height: 100%;
   margin: 0;
 }
@@ -41,7 +42,7 @@ footer {
 img {
   width: 100%;
   height: 50%;
-      object-fit: inherit !important;
+  object-fit: inherit !important;
 }
 
 .bg-white {
@@ -55,4 +56,14 @@ img {
 
 .p-6 {
   display: flex;
+}
+
+.app-container {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.content-wrap {
+  flex: 1;
 }
